--- a/index.html
+++ b/index.html
@@ -5,29 +5,108 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./main.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,500&display=swap"
+      rel="stylesheet"
+    />
     <title>masonry</title>
   </head>
   <body>
     <h1 class="container-title">What a country?</h1>
-    <div class="container">
-      <img src="./img/Albania.svg.png" alt="Albania" />
-      <img src="./img/Ukraine.png" alt="Ukraine" />
 
-      <img src="./img/Belgium.png" alt="Belgium" />
-      <img src="./img/Bulgaria.png" alt="Bulgaria" />
-      <img src="./img/Liechtenstein.png" alt="Liechtenstein" />
-      <img src="./img/Egypt.png" alt="Egypt" />
-      <img src="./img/Iceland.png" alt="Iceland" />
-      <img src="./img/Hungary.png" alt="Hungary" />
-
-      <img src="./img/India.png" alt="India" />
-      <img src="./img/Romania.png" alt="Romania" />
-      <img src="./img/Luxembourg.png" alt="Luxembourg" />
-      <img src="./img/North_Macedonia.png" alt="North_Macedonia" />
-      <img src="./img/Latvia.png" alt="Latvia" />
-
-      <img src="./img/Serbia.png" alt="Serbia" />
-      <img src="./img/Algeria.svg.png" alt="Algeria" />
-    </div>
+    <ul class="container">
+      <li class="container-item">
+        <img src="./img/Albania.svg.png" alt="Albania" />
+        <div class="container-overlay">
+          <p class="container-text Albania">Albania</p>
+        </div>
+      </li>
+      <li class="container-item">
+        <img src="./img/Ukraine.png" alt="Ukraine" />
+        <div class="container-overlay">
+          <p class="container-text">Ukraine</p>
+        </div>
+      </li>
+      <li class="container-item">
+        <img src="./img/Belgium.png" alt="Belgium" />
+        <div class="container-overlay">
+          <p class="container-text Belgium">Belgium</p>
+        </div>
+      </li>
+      <li class="container-item">
+        <img src="./img/Bulgaria.png" alt="Bulgaria" />
+        <div class="container-overlay">
+          <p class="container-text">Bulgaria</p>
+        </div>
+      </li>
+      <li class="container-item">
+        <img src="./img/Liechtenstein.png" alt="Liechtenstein" />
+        <div class="container-overlay">
+          <p class="container-text">Liechtenstein</p>
+        </div>
+      </li>
+      <li class="container-item">
+        <img src="./img/Egypt.png" alt="Egypt" />
+        <div class="container-overlay">
+          <p class="container-text Egypt">Egypt</p>
+        </div>
+      </li>
+      <li class="container-item">
+        <img src="./img/Iceland.png" alt="Iceland" />
+        <div class="container-overlay">
+          <p class="container-text Iceland">Iceland</p>
+        </div>
+      </li>
+      <li class="container-item">
+        <img src="./img/Hungary.png" alt="Hungary" />
+        <div class="container-overlay">
+          <p class="container-text">Hungary</p>
+        </div>
+      </li>
+      <li class="container-item">
+        <img src="./img/India.png" alt="India" />
+        <div class="container-overlay">
+          <p class="container-text India">India</p>
+        </div>
+      </li>
+      <li class="container-item">
+        <img src="./img/Romania.png" alt="Romania" />
+        <div class="container-overlay">
+          <p class="container-text">Romania</p>
+        </div>
+      </li>
+      <li class="container-item">
+        <img src="./img/Luxembourg.png" alt="Luxembourg" />
+        <div class="container-overlay">
+          <p class="container-text">Luxembourg</p>
+        </div>
+      </li>
+      <li class="container-item">
+        <img src="./img/North_Macedonia.png" alt="North_Macedonia" />
+        <div class="container-overlay">
+          <p class="container-text">North_Macedonia</p>
+        </div>
+      </li>
+      <li class="container-item">
+        <img src="./img/Latvia.png" alt="Latvia" />
+        <div class="container-overlay">
+          <p class="container-text">Latvia</p>
+        </div>
+      </li>
+      <li class="container-item">
+        <img src="./img/Serbia.png" alt="Serbia" />
+        <div class="container-overlay">
+          <p class="container-text Serbia">Serbia</p>
+        </div>
+      </li>
+      <li class="container-item">
+        <img src="./img/Algeria.svg.png" alt="Algeria" />
+        <div class="container-overlay">
+          <p class="container-text Algeria">Algeria</p>
+        </div>
+      </li>
+    </ul>
   </body>
 </html>
