--- a/index.html
+++ b/index.html
@@ -18,94 +18,186 @@
 
     <ul class="container">
       <li class="container-item">
-        <img src="./img/Albania.svg.png" alt="Albania" />
-        <div class="container-overlay">
-          <p class="container-text Albania">Albania</p>
-        </div>
+        <a
+          href="https://ru.wikipedia.org/wiki/%D0%90%D0%BB%D0%B1%D0%B0%D0%BD%D0%B8%D1%8F"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <img src="./img/Albania.svg.png" alt="Albania" />
+          <div class="container-overlay">
+            <p class="container-text Albania">Albania</p>
+          </div>
+        </a>
+
+        >
       </li>
       <li class="container-item">
-        <img src="./img/Ukraine.png" alt="Ukraine" />
-        <div class="container-overlay">
-          <p class="container-text">Ukraine</p>
-        </div>
+        <a
+          href="https://ru.wikipedia.org/wiki/%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%B0"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <img src="./img/Ukraine.png" alt="Ukraine" />
+          <div class="container-overlay">
+            <p class="container-text">Ukraine</p>
+          </div>
+        </a>
       </li>
       <li class="container-item">
-        <img src="./img/Belgium.png" alt="Belgium" />
-        <div class="container-overlay">
-          <p class="container-text Belgium">Belgium</p>
-        </div>
+        <a
+          href="https://ru.wikipedia.org/wiki/%D0%91%D0%B5%D0%BB%D1%8C%D0%B3%D0%B8%D1%8F"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <img src="./img/Belgium.png" alt="Belgium" />
+          <div class="container-overlay">
+            <p class="container-text Belgium">Belgium</p>
+          </div>
+        </a>
       </li>
       <li class="container-item">
-        <img src="./img/Bulgaria.png" alt="Bulgaria" />
-        <div class="container-overlay">
-          <p class="container-text">Bulgaria</p>
-        </div>
+        <a
+          href="https://ru.wikipedia.org/wiki/%D0%91%D0%BE%D0%BB%D0%B3%D0%B0%D1%80%D0%B8%D1%8F"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <img src="./img/Bulgaria.png" alt="Bulgaria" />
+          <div class="container-overlay">
+            <p class="container-text">Bulgaria</p>
+          </div>
+        </a>
       </li>
       <li class="container-item">
         <img src="./img/Liechtenstein.png" alt="Liechtenstein" />
-        <div class="container-overlay">
-          <p class="container-text">Liechtenstein</p>
-        </div>
+        <a
+          href="https://ru.wikipedia.org/wiki/%D0%9B%D0%B8%D1%85%D1%82%D0%B5%D0%BD%D1%88%D1%82%D0%B5%D0%B9%D0%BD"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <div class="container-overlay">
+            <p class="container-text">Liechtenstein</p>
+          </div>
+        </a>
       </li>
       <li class="container-item">
-        <img src="./img/Egypt.png" alt="Egypt" />
-        <div class="container-overlay">
-          <p class="container-text Egypt">Egypt</p>
-        </div>
+        <a
+          href="https://ru.wikipedia.org/wiki/%D0%95%D0%B3%D0%B8%D0%BF%D0%B5%D1%82"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <img src="./img/Egypt.png" alt="Egypt" />
+          <div class="container-overlay">
+            <p class="container-text Egypt">Egypt</p>
+          </div>
+        </a>
       </li>
       <li class="container-item">
-        <img src="./img/Iceland.png" alt="Iceland" />
-        <div class="container-overlay">
-          <p class="container-text Iceland">Iceland</p>
-        </div>
+        <a
+          href="https://ru.wikipedia.org/wiki/%D0%98%D1%81%D0%BB%D0%B0%D0%BD%D0%B4%D0%B8%D1%8F"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <img src="./img/Iceland.png" alt="Iceland" />
+          <div class="container-overlay">
+            <p class="container-text Iceland">Iceland</p>
+          </div>
+        </a>
       </li>
       <li class="container-item">
-        <img src="./img/Hungary.png" alt="Hungary" />
-        <div class="container-overlay">
-          <p class="container-text">Hungary</p>
-        </div>
+        <a
+          href="https://ru.wikipedia.org/wiki/%D0%91%D0%BE%D0%BB%D0%B3%D0%B0%D1%80%D0%B8%D1%8F"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <img src="./img/Hungary.png" alt="Hungary" />
+          <div class="container-overlay">
+            <p class="container-text">Hungary</p>
+          </div>
+        </a>
       </li>
       <li class="container-item">
-        <img src="./img/India.png" alt="India" />
-        <div class="container-overlay">
-          <p class="container-text India">India</p>
-        </div>
+        <a
+          href="https://ru.wikipedia.org/wiki/%D0%98%D0%BD%D0%B4%D0%B8%D1%8F"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <img src="./img/India.png" alt="India" />
+          <div class="container-overlay">
+            <p class="container-text India">India</p>
+          </div>
+        </a>
       </li>
       <li class="container-item">
-        <img src="./img/Romania.png" alt="Romania" />
-        <div class="container-overlay">
-          <p class="container-text">Romania</p>
-        </div>
+        <a
+          href="https://ru.wikipedia.org/wiki/%D0%A0%D1%83%D0%BC%D1%8B%D0%BD%D0%B8%D1%8F"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <img src="./img/Romania.png" alt="Romania" />
+          <div class="container-overlay">
+            <p class="container-text">Romania</p>
+          </div>
+        </a>
       </li>
       <li class="container-item">
-        <img src="./img/Luxembourg.png" alt="Luxembourg" />
-        <div class="container-overlay">
-          <p class="container-text">Luxembourg</p>
-        </div>
+        <a
+          href="https://ru.wikipedia.org/wiki/%D0%9B%D1%8E%D0%BA%D1%81%D0%B5%D0%BC%D0%B1%D1%83%D1%80%D0%B3"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <img src="./img/Luxembourg.png" alt="Luxembourg" />
+          <div class="container-overlay">
+            <p class="container-text">Luxembourg</p>
+          </div>
+        </a>
       </li>
       <li class="container-item">
-        <img src="./img/North_Macedonia.png" alt="North_Macedonia" />
-        <div class="container-overlay">
-          <p class="container-text">North_Macedonia</p>
-        </div>
+        <a
+          href="https://ru.wikipedia.org/wiki/%D0%A1%D0%B5%D0%B2%D0%B5%D1%80%D0%BD%D0%B0%D1%8F_%D0%9C%D0%B0%D0%BA%D0%B5%D0%B4%D0%BE%D0%BD%D0%B8%D1%8F"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <img src="./img/North_Macedonia.png" alt="North_Macedonia" />
+          <div class="container-overlay">
+            <p class="container-text">North_Macedonia</p>
+          </div>
+        </a>
       </li>
       <li class="container-item">
-        <img src="./img/Latvia.png" alt="Latvia" />
-        <div class="container-overlay">
-          <p class="container-text">Latvia</p>
-        </div>
+        <a
+          href="https://ru.wikipedia.org/wiki/%D0%9B%D0%B0%D1%82%D0%B2%D0%B8%D1%8F"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <img src="./img/Latvia.png" alt="Latvia" />
+          <div class="container-overlay">
+            <p class="container-text">Latvia</p>
+          </div>
+        </a>
       </li>
       <li class="container-item">
-        <img src="./img/Serbia.png" alt="Serbia" />
-        <div class="container-overlay">
-          <p class="container-text Serbia">Serbia</p>
-        </div>
+        <a
+          href="https://ru.wikipedia.org/wiki/%D0%A1%D0%B5%D1%80%D0%B1%D0%B8%D1%8F"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <img src="./img/Serbia.png" alt="Serbia" />
+          <div class="container-overlay">
+            <p class="container-text Serbia">Serbia</p>
+          </div>
+        </a>
       </li>
       <li class="container-item">
-        <img src="./img/Algeria.svg.png" alt="Algeria" />
-        <div class="container-overlay">
-          <p class="container-text Algeria">Algeria</p>
-        </div>
+        <a
+          href="https://ru.wikipedia.org/wiki/%D0%90%D0%BB%D0%B6%D0%B8%D1%80"
+          target="_blank"
+          rel="noopener noreferrer"
+        >
+          <img src="./img/Algeria.svg.png" alt="Algeria" />
+          <div class="container-overlay">
+            <p class="container-text Algeria">Algeria</p>
+          </div>
+        </a>
       </li>
     </ul>
   </body>
